--- a/src/components/slider.css
+++ b/src/components/slider.css
@@ -32,18 +32,6 @@
     padding-right: 10% !important;
 }
 
-/*.carousel slide {*/
-
-/*}*/
-/*.custom-checkbox {*/
-/*    font-weight: 900;*/
-/*    text-align: left !important;*/
-/*    font-size: 27px;*/
-/*    font-family: Poppins;*/
-/*    letter-spacing: -0.38px;*/
-/*    color: #121F2B;*/
-/*    opacity: 1;*/
-/*}*/
 
 .vh-50 {
     height: 50vh;
@@ -94,7 +82,6 @@
 .checkbox-checked-section {
     background: #5887FF;
     opacity: 1;
-    /*color: #121F2B;*/
 }
 
 .checkbox-checked-section:active {
@@ -202,7 +189,6 @@ input[type="checkbox"]:checked + label::after {
     font-family: Bebas Neue;
     letter-spacing: 1.2px;
     opacity: 1;
-    /*padding: 5%;*/
     color: #FFFFFF;
     font-style: revert;
     margin-top: 119px;
@@ -226,27 +212,25 @@ input[type="checkbox"]:checked + label::after {
     letter-spacing: 0.4px;
     color: #FFFFFF;
     opacity: 1;
-    /*margin-top: 4.375rem;*/
-    /*margin-left: 236px;*/
+    margin-top: 4.375rem;
+    margin-left: 236px;
     margin-bottom: 174px;
 }
 
-.next-subtitle {
+.next-section-title {
     text-align: center;
-    font-size: 20px;
+    font-size: 56px;
     font-weight: 300;
-    font-family: Poppins;
+    font-family: BebasNeue;
     letter-spacing: 0.4px;
     color: #FFFFFF;
     opacity: 1;
-    /*margin-top: 4.375rem;*/
-    /*margin-left: 236px;*/
-    margin-bottom: 174px;
+    margin-top: 119px;
+    margin-bottom: 64px;
 }
 
 .next-section {
     background: #172A3A;
-    /*padding-top: 119px;*/
 }
 
 .next-row-section {
@@ -257,9 +241,8 @@ input[type="checkbox"]:checked + label::after {
 }
 
 .samuraiOne {
-    position: absolute;
-    left: 40px;
-    top: 840vh;
+    position: relative;
+    top: -13vh;
 }
 
 .sug-btn {
@@ -279,6 +262,7 @@ input[type="checkbox"]:checked + label::after {
     background-color: #121F2B;
     height: fit-content;
     padding-bottom: 5%;
+    color: white;
 }
 
 .faq-section-sub-title {
@@ -327,16 +311,20 @@ input[type="checkbox"]:checked + label::after {
     font-size: 28px;
     float: left;
     padding-top: 3%;
+    font-family: BebasNeue;
 }
 
 .v-desc {
-    font: normal normal normal 20px/28px Poppins;
+    font-family: Poppins;
+    font-size: 22px;
     letter-spacing: 0px;
     color: #121F2B;
     opacity: 1;
     text-align: left !important;
     padding-left: 4%;
     padding-bottom: 4%;
+    font-weight: bold;
+    padding-right: 5.5%;
 }
 
 .custom-button:focus {
@@ -345,7 +333,8 @@ input[type="checkbox"]:checked + label::after {
 }
 
 .card-header {
-    border-bottom: none;
+    border-bottom: none !important;
+    padding: 0;
 }
 
 .carousel-control-prev{
@@ -356,7 +345,9 @@ input[type="checkbox"]:checked + label::after {
     display: none !important;
 }
 
-
+.font-size-40{
+    font-size: 40px !important;
+}
 
 @media only screen and (max-width: 320px) {
 
